se incluyen animaciones en index + branding

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <!-- Bootstrap CSS -->
     <!-- <link href="css/bootstrap.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/animate.css">
 
 <!-- css propio -->
 
@@ -22,7 +23,7 @@
   		<nav class="navbar navbar-expand-md navbar-light bg-colorOwn">
   			<div class="container-fluid">
 		    	<a class="navbar-brand" href="index.html">
-		    		<img src="media/logo.svg" alt="Logo DuplaUX">
+		    		<img src="media/logo.svg" class="wow bounceInLeft scaleDown" alt="Logo DuplaUX">
 		    	</a>
 
 		  <!-- boton hamburguesa -->
@@ -32,23 +33,19 @@
 		 	<!-- fin boton hamburguesa -->
 
 			    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			      <ul class="navbar-nav ms-auto mb-2 mb-lg-2">
-
-			        <!-- <li class="nav-item">
-			          <a class="nav-link active" aria-current="page" href="#">Servicios</a>
-			        </li> -->
+			      <ul class="wow bounceInRight navbar-nav ms-auto mb-2 mb-lg-2">
 			        
 			        <li class="nav-item">
-			          <a class="nav-link" href="#">Servicios</a>
+			          <a class="moveUp nav-link" href="#">Servicios</a>
 			        </li>
 			        <li class="nav-item">
-			          <a class="nav-link" href="#">Portfolio</a>
+			          <a class="moveUp  nav-link" href="#">Portfolio</a>
 			        </li>
 			        <li class="nav-item">
-			          <a class="nav-link" href="#">Nosotros</a>
+			          <a class="moveUp  nav-link" href="#">Nosotros</a>
 			        </li>
 			        <li class="nav-item">
-			          <a class="nav-link" href="#">Contacto</a>
+			          <a class="moveUp  nav-link" href="#">Contacto</a>
 			        </li>			        			      
 			      </ul>			    
 			    </div>
@@ -58,11 +55,11 @@
 <!-- termina nav -->
 
 	<header>
-		<div class="texto-banner">
+		<div class="wow bounceInUp texto-banner">
 			<div>
 			<h1 class="banner__texto--detalles">¡Hola! Soy un H1, Bienvenido!</h1>
 			<h2 class="banner__texto--detalles">¡Y yo soy un H2! Wiiii!</h2>
-			<button id="button-form">
+			<button id="button-form" class="scaleDown">
 				<p>Contáctanos</p>
 			</button>
 			</div>
@@ -73,63 +70,63 @@
 
 	<main>
 	
-		<div class="container-fluid p-5">
+		<div class="wow bounceInUp container-fluid p-5">
 			
 			<h3>Nuestros servicios</h3>
 			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum impedit laboriosam, ea. Beatae odit est iusto impedit nobis quidem a molestias aspernatur assumenda neque odio, id, maxime quis, laudantium exercitationem, nam dolore magnam dolores enim.</p>
 
 			<div class="row">
 				
- 				<article class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
+ 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
  					<img src="media/icons/branding.png" alt="Logo branding">
  					<h3>Branding</h3>
  					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
  					<a href="branding.html">Ver más</a>
  				</article>
 
- 				<article class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
+ 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
  					<img src="media/icons/ux design.png" alt="Logo Diseño">
  					<h3>Diseño UX/UI</h3>
  					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
  					<a href="#">Ver más</a>
  				</article>
 
- 				<article class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
+ 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
  					<img src="media/icons/writing.png" alt="Logo UX writing">
  					<h3>UX writing</h3>
  					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
  					<a href="#">Ver más</a>
  				</article>
 
- 				<article class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
+ 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
  					<img src="media/icons/seo.png" alt="Logo SEO">
  					<h3>SEO</h3>
  					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
  					<a href="#">Ver más</a>
  				</article>
 
- 				<article class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
+ 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
  					<img src="media/icons/cm.png" alt="Logo Community management">
  					<h3>Community management</h3>
  					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
  					<a href="#">Ver más</a>
  				</article>
 
- 				<article class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
+ 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
  					<img src="media/icons/webdev.png" alt="Logo Desarrollo web">
  					<h3>Desarrollo web</h3>
  					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
  					<a href="#">Ver más</a>
  				</article>
 
- 				<article class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
+ 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
  					<img src="media/icons/translate.png" alt="Logo Traducción">
  					<h3>Traducción</h3>
  					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
  					<a href="#">Ver más</a>
  				</article>
 
- 				<article class="col-sm-12 col-md-6 col-lg-4 col-xl-3">
+ 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
  					<img src="media/icons/copywriting.png" alt="Logo Copywriting">
  					<h3>Copywriting</h3>
  					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
@@ -145,12 +142,12 @@
 
 			<h3 class="text-center">Nuestros clientes</h3>
 
-				<div id="clientes">
-					<img src="media/brands/pattucl.png" alt="Pattu.cl">
-					<img src="media/brands/qb.png" alt="Quantum Boxes Chile">
-					<img src="media/brands/edufuturo.png" alt="Edufuturo">
-					<img src="media/brands/mindflics.png" alt="Mindfilcs">
-					<img src="media/brands/duran counselling.png" alt="Duran Counselling">
+				<div id="clientes" class="wow pulse">
+					<img src="media/brands/pattucl.png" class="scaleDown" alt="Pattu.cl">
+					<img src="media/brands/qb.png" class="scaleDown" alt="Quantum Boxes Chile">
+					<img src="media/brands/edufuturo.png" class="scaleDown" alt="Edufuturo">
+					<img src="media/brands/mindflics.png" class="scaleDown" alt="Mindfilcs">
+					<img src="media/brands/duran counselling.png" class="scaleDown" alt="Duran Counselling">
 				</div>
 		</div>
 
@@ -162,7 +159,7 @@
 			<form action="contacto.php" id="contacto">
 		
 		
-		<div>	
+		<div class="wow pulse">	
 			<h3>Contáctanos</h3>
 			<p class="espacio">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Corporis mollitia temporibus similique modi voluptas illum, voluptatibus minus. Tempore dolores impedit amet quos, ipsum quas soluta porro iure, non, illo, labore.</p>
 
@@ -205,7 +202,7 @@
 						<label for="newsletter">Autorizo que me incluyan en la lista de contacto</label>
 					</li>
 				</ul>
-				<div class="botonEnviar">
+				<div class="botonEnviar scaleDown">
 				<button class="button-form">Enviar</button>
 				</div>
 
@@ -216,33 +213,33 @@
 
 <!-- termina contacto -->
 
-<footer>
+<footer class="wow bounceInUp">
 
 	<div class="container-fluid-p-3">
 
-			<h4 class="text-center p-5">Síguenos</h4>
+			<h3 class="text-center p-5">Síguenos</h3>
 
 			<div id="rrss">
-				<a href="https://instagram.com/duplaUX" target="_blank">
+				<a class="moveUp" href="https://instagram.com/duplaUX" target="_blank">
 					<img src="media/rrss/instagram.png" alt="Instagram">
 				</a>	
-				<a href="https://linkedin.com/" target="_blank">	
+				<a class="moveUp" href="https://linkedin.com/" target="_blank">	
 					<img src="media/rrss/linkedin.png" alt="Linkedin">
 				</a>
-				<a href="https://tiktok.com/" target="_blank">	
+				<a class="moveUp" href="https://tiktok.com/" target="_blank">	
 					<img src="media/rrss/tiktok.png" alt="Tiktok">
 				</a>
-				<a href="https://twitter.com/" target="_blank">	
+				<a class="moveUp" href="https://twitter.com/" target="_blank">	
 					<img src="media/rrss/twitter.png" alt="Twitter">
 				</a>
-				<a href="https://facebook.com/" target="_blank">
-
-
+				<a class="moveUp" href="https://facebook.com/" target="_blank">
 					<img src="media/rrss/facebook.png" alt="Facebook">
 				</a>
 			</div>
 			<div id="logo">
+				<a href="index.html">
 				<img src="media/logo.svg" alt="DuplaUX">
+				</a>
 			</div>
 			<ul>
 				<li class="text-center">
@@ -263,6 +260,11 @@
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
 
   </body>
 </html>
