--- a/branding.html
+++ b/branding.html
@@ -7,6 +7,7 @@
 <!-- Bootstrap CSS -->
     <!-- <link href="css/bootstrap.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/animate.css">
 
 <!-- css propio -->
 
@@ -22,7 +23,7 @@
   		<nav class="navbar navbar-expand-md navbar-light bg-colorOwn">
   			<div class="container-fluid">
 		    	<a class="navbar-brand" href="index.html">
-		    		<img src="media/logo.svg" alt="Logo DuplaUX">
+		    		<img src="media/logo.svg" class="wow bounceInLeft scaleDown" alt="Logo DuplaUX">
 		    	</a>
 
 		  <!-- boton hamburguesa -->
@@ -32,23 +33,19 @@
 		 	<!-- fin boton hamburguesa -->
 
 			    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-			      <ul class="navbar-nav ms-auto mb-2 mb-lg-2">
-
-			        <!-- <li class="nav-item">
-			          <a class="nav-link active" aria-current="page" href="#">Servicios</a>
-			        </li> -->
+			      <ul class="wow bounceInRight navbar-nav ms-auto mb-2 mb-lg-2">
 			        
 			        <li class="nav-item">
-			          <a class="nav-link" href="#">Servicios</a>
+			          <a class="moveUp nav-link" href="#">Servicios</a>
 			        </li>
 			        <li class="nav-item">
-			          <a class="nav-link" href="#">Portfolio</a>
+			          <a class="moveUp nav-link" href="#">Portfolio</a>
 			        </li>
 			        <li class="nav-item">
-			          <a class="nav-link" href="#">Nosotros</a>
+			          <a class="moveUp nav-link" href="#">Nosotros</a>
 			        </li>
 			        <li class="nav-item">
-			          <a class="nav-link" href="#">Contacto</a>
+			          <a class="moveUp nav-link" href="#">Contacto</a>
 			        </li>			        			      
 			      </ul>			    
 			    </div>
@@ -57,7 +54,7 @@
 
 <!-- termina nav -->
 
-		<div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+		<div id="carouselExampleSlidesOnly" class="wow bounceInUp carousel slide" data-bs-ride="carousel">
 		  <div class="carousel-inner">
 		    <div class="carousel-item active">
 		      <img src="media/slider/1.png" class="d-block w-100" alt="Primer slide">
@@ -87,7 +84,7 @@
 	</div>
 </div>
 
-<div class="col-sm-12 col-md-6 cajaFondo">
+<div class="wow bounceInUp col-sm-12 col-md-6 cajaFondo">
 	<div class="cajaTexto">
 		<img src="media/background_servicios.png" alt="foto">
 	</div>
@@ -104,7 +101,7 @@
 	
 	
 
-	<article id="bloqueBeneficios" class="card mb-3 col-sm-12 col-md-4 col-lg-4">
+	<article id="bloqueBeneficios" class="wow bounceInUp card mb-3 col-sm-12 col-md-4 col-lg-4">
 		<div id="badge">
 		  	<img src="media/icons/benefit.png" class="card-img-top" alt="Benefit">
 		  <div class="card-body">
@@ -116,7 +113,7 @@
 
 	</article>
 
-	<article id="bloqueBeneficios" class="card mb-3 col-sm-12 col-md-4 col-lg-4">
+	<article id="bloqueBeneficios" class="wow bounceInUp card mb-3 col-sm-12 col-md-4 col-lg-4">
 
 		<div id="badge">
 		  	<img src="media/icons/graph.png" class="card-img-top" alt="Crecimiento">
@@ -129,7 +126,7 @@
 
 	</article>
 
-	<article id="bloqueBeneficios" class="card mb-3 col-sm-12 col-md-4 col-lg-4">
+	<article id="bloqueBeneficios" class="wow bounceInUp card mb-3 col-sm-12 col-md-4 col-lg-4">
 		<div id="badge">
 		  	<img src="media/icons/brand.png" class="card-img-top" alt="Marca">
 		  <div class="card-body">
@@ -150,12 +147,12 @@
 
 			<h3 class="text-center">Nuestros clientes</h3>
 
-				<div id="clientes">
-					<img src="media/brands/pattucl.png" alt="Pattu.cl">
-					<img src="media/brands/qb.png" alt="Quantum Boxes Chile">
-					<img src="media/brands/edufuturo.png" alt="Edufuturo">
-					<img src="media/brands/mindflics.png" alt="Mindfilcs">
-					<img src="media/brands/duran counselling.png" alt="Duran Counselling">
+				<div id="clientes" class="wow pulse">
+					<img src="media/brands/pattucl.png"class="scaleDown"  alt="Pattu.cl">
+					<img src="media/brands/qb.png" class="scaleDown" alt="Quantum Boxes Chile">
+					<img src="media/brands/edufuturo.png" class="scaleDown" alt="Edufuturo">
+					<img src="media/brands/mindflics.png" class="scaleDown" alt="Mindfilcs">
+					<img src="media/brands/duran counselling.png" class="scaleDown" alt="Duran Counselling">
 				</div>
 		</div>	
 		
@@ -166,7 +163,7 @@
 
 <!-- termina main -->
 
-<div id="formularioContacto">
+<div id="formularioContacto" class="wow pulse">
 			<form action="contacto.php" id="contacto">
 		
 		
@@ -214,7 +211,7 @@
 					</li>
 				</ul>
 				<div class="botonEnviar">
-				<button class="button-form">Enviar</button>
+				<button class="button-form scaleDown">Enviar</button>
 				</div>
 
 				
@@ -224,33 +221,33 @@
 
 <!-- termina contacto -->
 
-<footer>
+<footer class="wow bounceInUp">
 
 	<div class="container-fluid-p-3">
 
-			<h4 class="text-center p-5">Síguenos</h4>
+			<h3 class="text-center p-5">Síguenos</h3>
 
 			<div id="rrss">
-				<a href="https://instagram.com/duplaUX" target="_blank">
+				<a class="moveUp" href="https://instagram.com/duplaUX" target="_blank">
 					<img src="media/rrss/instagram.png" alt="Instagram">
 				</a>	
-				<a href="https://linkedin.com/" target="_blank">	
+				<a class="moveUp" href="https://linkedin.com/" target="_blank">	
 					<img src="media/rrss/linkedin.png" alt="Linkedin">
 				</a>
-				<a href="https://tiktok.com/" target="_blank">	
+				<a class="moveUp" href="https://tiktok.com/" target="_blank">	
 					<img src="media/rrss/tiktok.png" alt="Tiktok">
 				</a>
-				<a href="https://twitter.com/" target="_blank">	
+				<a class="moveUp" href="https://twitter.com/" target="_blank">	
 					<img src="media/rrss/twitter.png" alt="Twitter">
 				</a>
-				<a href="https://facebook.com/" target="_blank">
-
-
+				<a class="moveUp" href="https://facebook.com/" target="_blank">
 					<img src="media/rrss/facebook.png" alt="Facebook">
 				</a>
 			</div>
 			<div id="logo">
+				<a href="index.html">
 				<img src="media/logo.svg" alt="DuplaUX">
+				</a>
 			</div>
 			<ul>
 				<li class="text-center">
@@ -271,6 +268,11 @@
 
 		<!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script src="js/wow.min.js"></script>
+              <script>
+              new WOW().init();
+              </script>
 
 </body>
 </html>
