--- a/nosotros.html
+++ b/nosotros.html
@@ -1,10 +1,11 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	
 
-<!-- Bootstrap CSS -->
+	<!-- Bootstrap CSS -->
     <!-- <link href="css/bootstrap.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="css/animate.css">
@@ -36,7 +37,7 @@
 			      <ul class="wow bounceInRight navbar-nav ms-auto mb-2 mb-lg-2">
 			        
 			        <li class="nav-item">
-			          <a class="moveUp nav-link" href="#serviciosAncla">Servicios</a>
+			          <a class="moveUp nav-link" href="index.html#serviciosAncla">Servicios</a>
 			        </li>
 			        <li class="nav-item">
 			          <a class="moveUp  nav-link" href="portfolio.html">Portfolio</a>
@@ -55,105 +56,43 @@
 <!-- termina nav -->
 
 	<header>
-		<div class="wow bounceInUp texto-banner">
-			<div>
-			<h1 class="banner__texto--detalles">¡Hola! Soy un H1, Bienvenido!</h1>
-			<h2 class="banner__texto--detalles">¡Y yo soy un H2! Wiiii!</h2>
-			<button id="button-form" class="scaleDown">
-				<p>Contáctanos</p>
-			</button>
-			</div>
+		<div class="texto-banner">
+			<h1 class="banner__texto--color espacio">Nosotros</h1>
 		</div>
 	</header>
 
-<!-- termina header -->
+	<!-- ends header -->
 
 	<main>
-	
-		<div class="wow bounceInUp container-fluid p-5">
-			
-			<h3>Nuestros servicios</h3>
-			<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum impedit laboriosam, ea. Beatae odit est iusto impedit nobis quidem a molestias aspernatur assumenda neque odio, id, maxime quis, laudantium exercitationem, nam dolore magnam dolores enim.</p>
 
-			<div id="serviciosAncla" class="row">
-				
- 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
- 					<img src="media/icons/branding.png" alt="Logo branding">
- 					<h3>Branding</h3>
- 					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
- 					<a href="branding.html">Ver más</a>
- 				</article>
-
- 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
- 					<img src="media/icons/ux design.png" alt="Logo Diseño">
- 					<h3>Diseño UX/UI</h3>
- 					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
- 					<a href="#">Ver más</a>
- 				</article>
-
- 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
- 					<img src="media/icons/writing.png" alt="Logo UX writing">
- 					<h3>UX writing</h3>
- 					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
- 					<a href="#">Ver más</a>
- 				</article>
-
- 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
- 					<img src="media/icons/seo.png" alt="Logo SEO">
- 					<h3>SEO</h3>
- 					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
- 					<a href="#">Ver más</a>
- 				</article>
-
- 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
- 					<img src="media/icons/cm.png" alt="Logo Community management">
- 					<h3>Community management</h3>
- 					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
- 					<a href="#">Ver más</a>
- 				</article>
-
- 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
- 					<img src="media/icons/webdev.png" alt="Logo Desarrollo web">
- 					<h3>Desarrollo web</h3>
- 					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
- 					<a href="#">Ver más</a>
- 				</article>
-
- 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
- 					<img src="media/icons/translate.png" alt="Logo Traducción">
- 					<h3>Traducción</h3>
- 					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
- 					<a href="#">Ver más</a>
- 				</article>
-
- 				<article class="wow bounceInUp col-sm-12 col-md-6 col-lg-4 col-xl-3">
- 					<img src="media/icons/copywriting.png" alt="Logo Copywriting">
- 					<h3>Copywriting</h3>
- 					<p>Lorem ipsum dolor, sit amet consectetur, adipisicing elit. Facere voluptate eius quas alias neque, aperiam.</p>
- 					<a href="#">Ver más</a>
- 				</article>
-
-			</div>
-
+	<section class="nosotros">
+		<div class="espacio-nosotros">
+		<h2 class="bloque-nosotros">Nuestra historia</h2>
+			<p class="bloque-nosotros"><strong>DuplaUX</strong> es una agencia de asesoría en experiencia de usuario donde trabajamos con los aspectos más importantes de la experiencia del usuario y el diseño de marcas.
+			Además, ofrecemos otros servicios relacionados con el diseño gráfico y la gestión de contenido.</p>
+		
 		</div>
-
-
-		<div class="container-fluid p-3">
-
-			<h3 class="text-center">Nuestros clientes</h3>
-
-				<div id="clientes" class="wow pulse">
-					<img src="media/brands/pattucl.png" class="scaleDown" alt="Pattu.cl">
-					<img src="media/brands/qb.png" class="scaleDown" alt="Quantum Boxes Chile">
-					<img src="media/brands/edufuturo.png" class="scaleDown" alt="Edufuturo">
-					<img src="media/brands/mindflics.png" class="scaleDown" alt="Mindfilcs">
-					<img src="media/brands/duran counselling.png" class="scaleDown" alt="Duran Counselling">
-				</div>
+		<div class="bloque-nosotros">
+			<img src="media/historia.png" alt="">
 		</div>
+	</section>
+
+	<section class="nosotros">
+		<div class="bloque-nosotros">
+			<img src="media/historia.png" alt="">
+		</div>
+		<div class="espacio-nosotros">
+		<h2 class="bloque-nosotros">Misión</h2>
+			<p class="bloque-nosotros">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus illo ex accusantium consectetur, cum aspernatur suscipit, nisi optio quasi vero numquam. Voluptatem.</p>
+
+		<h2 class="bloque-nosotros">Visión</h2>
+			<p class="bloque-nosotros">Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus illo ex accusantium consectetur, cum aspernatur suscipit, nisi optio quasi vero numquam.</p>	
+		</div>
+		
+	</section>	
 
 	</main>
-
-<!-- termina main -->
+	<!-- ends main -->
 
 	<div id="formularioContacto">
 			<form action="contacto.php" id="contacto">
@@ -267,4 +206,8 @@
               </script>
 
   </body>
+</html>
+
+	
+</body>
 </html>
